# anthill-simulation

./: .gitignore  Ant.cpp  Ant.h  Anthill.cpp  Anthill.h  CMakeLists.txt  README.md  TextureManager.cpp  TextureManager.h  main.cpp
src/: Ant.cpp  Ant.h  Anthill.cpp  Anthill.h  Simulation.cpp  Simulation.h  TextureManager.cpp  TextureManager.h  main.cpp
src/Core/: EventManager.cpp  EventManager.h  Simulation.cpp  Simulation.h
src/Drawable/: AntDrawable.cpp  AntDrawable.h  AnthillDrawable.cpp  AnthillDrawable.h  AnthillInfoText.cpp  AnthillInfoText.h
src/Model/: Ant.cpp  Ant.h  Anthill.cpp  Anthill.h  AnthillSettings.cpp  AnthillSettings.h  Enemy.cpp  Enemy.h  EnemyController.cpp  EnemyController.h  Entity.cpp  Entity.h  FoodPoint.cpp  FoodPoint.h  Game.cpp  Game.h  HiveMind.cpp  HiveMind.h  IAttackable.h  Store.cpp  Store.h
src/Model/Maps/: EnemyMap.cpp  EnemyMap.h  FoodMap.cpp  FoodMap.h  Map.cpp  Map.h  WoodMap.cpp  WoodMap.h
src/Model/Roles/: Builder.cpp  Builder.h  Caretaker.cpp  Caretaker.h  Cleaner.cpp  Cleaner.h  Forager.cpp  Forager.h  NoRole.cpp  NoRole.h  Role.cpp  Role.h  Soldier.cpp  Soldier.h
src/Roles/: Builder.cpp  Builder.h  Caretaker.cpp  Caretaker.h  Cleaner.cpp  Cleaner.h  Forager.cpp  Forager.h  NoRole.cpp  NoRole.h  Role.h  Soldier.cpp  Soldier.h
src/Utils/: Color.h  Random.cpp  Random.h  TextureManager.cpp  TextureManager.h
src/View/: AntDrawable.cpp  AntDrawable.h  AnthillDrawable.cpp  AnthillDrawable.h  Background.cpp  Background.h  FoodMap.cpp  FoodMap.h  FoodPoint.cpp  FoodPoint.h  WoodPoint.cpp  WoodPoint.h
src/View/Points/: FoodPoint.cpp  FoodPoint.h  Point.cpp  Point.h  WoodPoint.cpp  WoodPoint.h
src/View/Render/: GlowedSprite.cpp  GlowedSprite.h  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  RoundedRect.cpp  RoundedRect.h
src/View/UI/: AntInfoText.cpp  AntInfoText.h  AnthillInfoText.cpp  AnthillInfoText.h  FPSText.cpp  FPSText.h  HUD.cpp  HUD.h  Logger.cpp  Logger.h
